--- a/src/app/pages/vault/vault.component.scss
+++ b/src/app/pages/vault/vault.component.scss
@@ -190,8 +190,8 @@
 @media screen and (max-width: 385px) {
   .mobile-icon {
     position: absolute;
-    top: 5px;
-    left: 10px;
+    top: 10px;
+    left: 15px;
   }
 }
 
